--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
     "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.11",
+    "@mui/material": "^5.10.12",
     "@types/bcryptjs": "^2.4.2",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.0",
+    "@typescript-eslint/parser": "^5.42.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.29.3",
-    "jotai": "^1.9.0",
+    "jotai": "^1.9.1",
     "mongodb": "^4.11.0",
     "next": "^12.3.1",
     "next-auth": "^4.15.0",
@@ -36,7 +36,7 @@
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
     "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "^13.0.1",
     "typescript": "4.8.4"
   }
 }
