--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "date-fns": "^2.29.3",
     "jotai": "^1.9.1",
     "mongodb": "^4.11.0",
-    "next": "^12.3.1",
-    "next-auth": "^4.15.0",
+    "next": "^13.0.2",
+    "next-auth": "^4.16.2",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "ts-key-enum": "^2.0.12",
@@ -35,7 +35,7 @@
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
-    "eslint": "8.26.0",
+    "eslint": "^8.27.0",
     "eslint-config-next": "^13.0.1",
     "typescript": "4.8.4"
   }
