--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
   },
   "devDependencies": {
     "@types/node": "18.11.7",
-    "@types/react": "18.0.24",
-    "@types/react-dom": "18.0.8",
+    "@types/react": "^18.0.25",
+    "@types/react-dom": "^18.0.9",
     "eslint": "^8.27.0",
     "eslint-config-next": "^13.0.1",
-    "typescript": "4.8.4"
+    "typescript": "^4.9.3"
   }
 }
